Fix Dropdown Z-Index

--- a/assets/scss/core/_dropdown.scss
+++ b/assets/scss/core/_dropdown.scss
@@ -51,6 +51,7 @@
   .navbar-nav {
     .dropdown-menu {
       position: absolute;
+      z-index: $zindex-sticky;
     }
     // Menu positioning
     //
